--- a/index.html
+++ b/index.html
@@ -1,22 +1,129 @@
 <!DOCTYPE HTML>
 <html>
-    <head>
-	<title>GIT it like it's hot!</title>
-        <meta name="author" content="Jasmina Travnjak"/>
-	</head>
 
-    <body >
+<head>
+	<title>GIT it like it's hot!</title>
+	<meta name="author" content="Jasmina Travnjak" />
+</head>
+
+<body>
 	<section>
-        <h1>THE GIT RAP</h1>
+		<h1>THE GIT RAP</h1>
 		<p>yo, this is the git rap
 			we gonna do it like this
 			we gonna do it like that
 			i got ten stacks pushed in my stash
 			git stash clear, it was gone like that
-			but have no fear cause i bounce right back</p>
-		</section>
-		<footer>
-		 <a href="https://soundcloud.com/marak/the-git-rap">GIT RAP all rights reserved</a>
-		</footer>
-    </body>
+			but have no fear cause i bounce right back
+			<br>
+			<br>
+
+			( bounce right back bounce right back )
+			<br>
+			some use a gui, and i guess thats fine
+			but your boy right here prefers the command line
+			<br>
+			<br>
+			git init to git the party started
+			git add them files and then we git retarded
+			got got no no no idea what what what is in store
+			just a touch that file dot-git-ignore
+			<br><br>
+			( dont forget .DS_Store in your gitignore )
+			( dont forget .DS_Store in your gitignore )
+			thats only if you got mac
+			<br><br>
+			so, now we taking the tour
+			got files added, don't need no more
+			yo this is too legit to quit
+			so its time for the git commit
+			i do a dash-a to specify them all
+			dash-m with the message that ima show y'all
+			this is the first commit and we standing tall
+			git push origin master you dont wanna brawl
+			<br><br>
+			( why? )
+			<br><br>
+			chillin in my dash-b boy stance
+			git check it out yo to make a new branch
+			top of the mountain pushing down code like an avalanche
+			SVN and CVS never had a chance
+			its undisputed its distributed
+			all the boys and girls agree the github
+			octocat is the cutest
+			im a github boss title unrefuted
+			follow marak right now ( uhh uhh just do it )
+			<br><br>
+			( yeah github is pretty cool )
+			<br><br>
+			ohh hrmm is that a remote we have
+			i wont git merge your branch if the code is bad
+			your pull request has no tests and you know thats sad
+			i got continuous git integration bro, you mad?
+			even chad, could not deny the work flow...
+			git is a power tool ready to put in work...
+			<br><br>
+			mein, this is the git rap
+			i am your git teacher
+			and you could get slapped
+			man, you better check yourself
+			man, is the tool to help you help yourself
+			man, then name the tool before wreck yourself
+			run man git to get knowledge and wealth
+			<br><br>
+			so git hubbers just keep iterating
+			git tag all them versions keep the changelog stating
+			a brief description of things dun change
+			always using semantic versioning raaaaanges
+			its not dangerous
+			internet strangers
+			open-source bangers
+			coding in hangers
+			pull request slangers
+			that you dont wanna anger
+			break the bank at the Tangiers
+			flow like Danny Ocean
+			drink git kool-aide its a powerful potion
+			<br><br>
+			( chug chug chug )
+			<br><br>
+			zomg bro that commit its so sick
+			just allow me to do git cherry-pick
+			<br><br>
+			because its too legit to quit
+			with the git cherry pick
+			we do it like this
+			<br><br>
+			head in the cloud thinking about workflow
+			rebase when git pull or you will get hurt yo
+			so pop that stash like a collared shirt bro
+			grammers dont go into interactive mode
+			squash my commit and i will explode
+			if you regress my feature
+			i'll unleash the hypnotoad
+			<br><br>
+			( waaaahhh )
+			<br><br>
+			so, back to the lesson at hand
+			git status to determine to the plan
+			git diff color to see where i am
+			i get with git every day i can
+			this is the git rap and i am the git man
+			wait you mean li-li-linus, mr linux royal highness
+			he made git the best he can so you know it is the finest
+			anyone not using git needs to be reminded its
+			imperative to distribute authors of the code
+			if we didnt have git the linux kernel would probably explode
+			so says we all even the hypnotoad
+			the shoulders of giants is where we rode
+			we roll in compliance with the history of code
+			<br><br>
+			( code code code code code )
+		</p>
+	</section>
+	<footer>
+		<a href="https://soundcloud.com/marak/the-git-rap">GIT RAP all rights reserved</a>
+	</footer>
+</body>
+
 </html>
