--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 			the shoulders of giants is where we rode
 			we roll in compliance with the history of code
 			<br><br>
-			( code code code code code ) sayed
+			( code code code code code ) sayed hello
 		</p>
 	</section>
 	<footer>
